Use add-modules in JDK 9 and 10 unit tests
Signed-off-by: Andy McCright <j.andrew.mccright@gmail.com>